Python ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,70 @@ cmake_install.cmake
 CTestTestfile.cmake
 
 data/
+
+# Python bytecode
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Distribution / packaging
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Unit test / coverage
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Logs
+*.log
+
+# IDEs / Editors
+.spyderproject
+.spyproject
+.ropeproject
+
+# Data / temporary
+*.npy
+*.npz
+*.csv
+*.h5
+*.pkl
+*.joblib
+*.sqlite3
